src/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: #f4f4f4;
  font-family: system-ui;
}

.header {
  padding-block: 1rem;
  background-color: #333;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

.header__title {
  text-align: center;
  color: #fff;
}

main {
  padding: 1.5rem 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.controls {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.controls__group {
  display: flex;
  gap: 0.75rem;
}

.controls__group--color {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.controls__group--grid-size {
  flex-direction: column;
  align-items: center;
  margin-bottom: 0.5rem;
}

.controls__input--color {
  width: 50px;
  height: 25px;
  border: 1px solid #999;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.15);
  cursor: pointer;
}

.controls__input--color::-moz-color-swatch {
  border: none;
}

.controls__input--color::-webkit-color-swatch {
  border: none;
}

.controls__input--color::-webkit-color-swatch-wrapper {
  padding: 0;
}

.controls__input--grid-size {
  appearance: none;
  width: 100%;
  height: 8px;
  border: 1px solid #999;
  background-color: #eee;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.15);
  cursor: pointer;
}

.controls__input--grid-size::-moz-range-thumb {
  width: 20px;
  height: 20px;
  border: none;
  border-radius: 50%;
  background-color: #333;
}

.controls__input--grid-size::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #333;
}

.controls__btn {
  flex: 1;
  padding-block: 0.5rem;
  border: 1px solid #999;
  background-color: #eee;
  color: #000;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.15);
  font-family: inherit;
  font-size: 1rem;
  cursor: pointer;
}

.controls__btn--selected {
  background-color: #444;
  color: #fff;
}

.canvas {
  width: min(100%, 576px);
  touch-action: pinch-zoom;
  cursor: crosshair;
}

@media (min-width: 768px) {
  .main {
    flex-direction: row;
    justify-content: center;
  }

  .controls {
    flex-shrink: 0;
  }

  .controls__group {
    flex-direction: column;
  }

  .controls__group--grid-size {
    margin-bottom: 2rem;
  }
}

@media (hover: hover) and (pointer: fine) {
  .controls__btn:hover {
    filter: brightness(0.9);
  }

  .controls__btn:active {
    filter: brightness(0.85);
  }
}

